bluec-tests/tests/invalid/types_longdouble/mod_longdouble_2.c
int main(void) {
    /* You can't apply the modulo operator to a float */
    long double e =  3.0L % 5;
    return 0;
}